# mangarr

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/mangarr/: __init__.py  chapter_metadata.py  config.py  db.py  main.py  models.py  notifications.py  schemas.py  settings_service.py  titles.py  torrent_selection.py  util.py  volumes.py
backend/mangarr/api/: apikeys.py  deps.py  library.py  queue.py  search.py  series.py  settings.py  system.py
backend/mangarr/download/: cbz.py  direct.py  qbittorrent.py
backend/mangarr/jobs/: scheduler.py  tasks.py
backend/mangarr/metadata/: anilist.py  base.py  mangaupdates.py
backend/mangarr/sources/: asura.py  base.py  mangadex.py  mangafire.py  mangaplus.py  nyaa.py  registry.py  tcbscans.py  viz.py  weebcentral.py  wikipedia.py
backend/tests/: test_apikeys.py  test_cbz.py  test_chapter_metadata.py  test_cleanup.py  test_content_proxy.py  test_direct_stall.py  test_folder_pinning.py  test_grab_retry.py  test_importer.py  test_library_path_safety.py  test_mangadex.py  test_mangafire.py  test_mangaupdates.py  test_matcher.py  test_naming.py  test_new_sources.py  test_notifications.py  test_nyaa.py  test_qbittorrent.py  test_queue_retry.py  test_refresh_reconcile.py  test_rename.py  test_rl_request.py  test_scanner.py  test_search_scope.py  test_settings_validation.py  test_special_chapters.py  test_titles.py  test_torrent_selection.py  test_util.py  test_viz.py  test_volume_resync_preview.py  test_volumes.py  test_weebcentral.py  test_wikipedia.py
docker/: Dockerfile
frontend/: index.html  (+3 more)
(+19 files in other folders)
