[project]
name = "mangarr"
version = "0.1.0"
description = "Radarr/Sonarr-style automation for manga and comics"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "apscheduler>=3.10,<4",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.9",
    "mwparserfromhell>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mangarr*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
